<resources>
    <string name="app_name">HappyThoughts</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_item_details">ItemDetailsActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="short_description">Enter Short Description</string>
    <string name="full_description">Enter Full Description</string>
    <string name="enter_time_of_donation">Enter Time of Donation</string>
    <string name="enter_amount_of_donation">Enter Amount of Donation</string>
    <string name="add_donation">Add Donation</string>
    <string name="cancel">Cancel</string>
    <string name="textview">TextView</string>
    <string name="location_name">Location Name</string>
    <string name="location_type">Location Type</string>
    <string name="address">Address:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="phone_number">Phone number:</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="map">Map</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="name_search">Name Search</string>
    <string name="category_search">Category Search</string>
    <string name="there_are_no_items">There are no items</string>
    <string name="sign_in">Sign In</string>
    <string name="registration">Registration</string>
    <string name="donation_location">Location: %1$s</string>
    <string name="donation_short">Short Description: %1$s</string>
    <string name="donation_full">Full Description: %1$s</string>
    <string name="donation_value">Value: %1$s</string>
    <string name="donation_time">Time: %1$s</string>
    <string name="donation_type">Type: %1$s</string>



</resources>
