<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.AddDonationActivity">


    <Spinner
        android:id="@+id/LocationSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/ItemSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LocationSpinner"/>

    <EditText
        android:id="@+id/TimeStamp"
        android:hint="@string/enter_time_of_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:layout_below="@id/ItemSpinner"/>


    <EditText
        android:id="@+id/ShortDescription"
        android:hint="@string/short_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/TimeStamp"/>

    <EditText
        android:id="@+id/FullDescription"
        android:hint="@string/full_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/ShortDescription"/>

    <EditText
        android:id="@+id/Value"
        android:hint="@string/enter_amount_of_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@id/FullDescription"/>

    <Button
        android:id="@+id/addDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_donation"
        android:layout_below="@id/Value"/>

    <Button
        android:id="@+id/cancelDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/addDonation"
        android:layout_marginStart="10dp"
        android:layout_below="@id/Value"
        android:text="@string/cancel"/>


</RelativeLayout>