<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainActivity">

    <Button
        android:id="@+id/logoutButton"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/logout"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/addDonationButton"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/logoutButton"
        android:text="@string/add"
        android:textColor="@android:color/white" />

    <ListView
        android:id="@+id/locationList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logoutButton"/>

    <Button
        android:id="@+id/searchButton"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/addDonationButton"
        android:text="@string/search"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mapButton"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/searchButton"
        android:text="@string/map"
        android:textColor="@android:color/white" />

</RelativeLayout>